--- a/package/Install
+++ b/package/Install
@@ -2,7 +2,7 @@
 ; -----------------------------------------
 ;
 ; Author: Henrik Noerfjand Stengaard 
-; Date: 2019-10-17
+; Date: 2021-08-15
 ;
 ; This script extracts and installs ClassicWB FULL v28 created by Bloodwych from EAB.
 ; With permission from Bloodwych it's been converted to a package for HstWB Installer.
@@ -14,7 +14,7 @@
 ; - Removed all "press enter to continue" expect last one used after installation complete message is shown.
 ; - Removed and reduced waits.
 ; - Adjusted text spacing.
-; - Added support for Amiga OS 3.1.4:
+; - Added support for Amiga OS 3.2 and 3.1.4:
 ;   - Reinstalled MUI to fix Scalos prefs and iGame.
 ;   - Disabled PatchRAM, StackAttack, FBlit and FText.
 ;   - Patched Scalos title to 3.1.4 for no theme, Oldicons, Retro and ReGen themes.
@@ -25,6 +25,7 @@
 ;   - Added LoadModule ROMUPDATE to support Kickstart 3.1 being patched to 3.1.4.
 ;   - Added version checking of DEVS:scsi.device, so it only will be loaded if scsi.device in memory/resident is less than v43.45.
 ;   - Added install patch Amiga OS 3.1.4.1, if Amiga OS 3.1.4.1 update is installed.
+;   - Disabled Copper, BorderBlank, StackAttack.
 
 
 ; Copy readme and screenshots to locale help for ClassicWB FULL
@@ -60,12 +61,18 @@ copy >NIL: PACKAGEDIR:screenshots/#?.iff SYSTEMDIR:Locale/Help/ClassicWB-FULL/sc
 
 
 ; detect amiga os version
-set amigaosversion ""
+set amigaosversion "3.1"
 IF EXISTS "SYSTEMDIR:Libs/workbench.library"
   ; set amiga os version to 3.1.4, if workbench.library file is equal or greater than v45.194
   Version >NIL: "SYSTEMDIR:Libs/workbench.library" 45 194 FILE
   IF $RC EQ 0 VAL
     set amigaosversion "3.1.4"
+  ENDIF
+
+  ; set amiga os version to 3.2, if workbench.library file is equal or greater than v47.33
+  Version >NIL: "SYSTEMDIR:Libs/workbench.library" 47 33 FILE
+  IF $RC EQ 0 VAL
+    set amigaosversion "3.2"
   ENDIF
 ELSE
   ; set amiga os version to 3.1.4, if loaded workbench.library is equal or greater than v45.194
@@ -73,7 +80,14 @@ ELSE
   IF $RC EQ 0 VAL
     set amigaosversion "3.1.4"
   ENDIF
+
+  ; set amiga os version to 3.2, if loaded workbench.library is equal or greater than v47.33
+  Version >NIL: "workbench.library" 47 33
+  IF $RC EQ 0 VAL
+    set amigaosversion "3.2"
+  ENDIF
 ENDIF
+
 
 ; Extract classicwb full v28 zip to systemdir
 echo "Installing ClassicWB FULL..."
@@ -81,8 +95,8 @@ echo "Installing ClassicWB FULL..."
 ; copy loadwb for enabling amigaos
 Copy >NIL: "SYSTEMDIR:C/LoadWB" "SYSTEMDIR:C/LoadWB.AmigaOS"
 
-IF "$amigaosversion" EQ "3.1.4"
-  ; extract classicwb full excluding files conflicting with amiga os 3.1.4
+IF NOT "$amigaosversion" EQ "3.1"
+  ; extract classicwb full excluding files conflicting with amiga os 3.2 and 3.1.4
   unzip -qq -o -x PACKAGEDIR:classicwb_full_v28.zip -d SYSTEMDIR: -x *LoadModule *LoadResource *MakeLink *SetPatch *CDFileSystem *CrossDOSFileSystem *FastFileSystem *DANSK.crossdos *INTL.crossdos *MAC.crossdos *68040.library *asl.library *Icon.Library *lowlevel.library *nonvolatile.library *realtime.library
 
   ; reinstall mui to fix scalos prefs and igame
@@ -91,12 +105,19 @@ IF "$amigaosversion" EQ "3.1.4"
   Copy >NIL: "SYSTEMDIR:Temp/MUI/MUI/#?" "SYSTEMDIR:System/MUI/" CLONE ALL
   Delete >NIL: "SYSTEMDIR:Temp/MUI/" ALL
 
-  ; copy startup-sequence for amiga os 3.1.4
-  Copy >NIL: PACKAGEDIR:Patches/Startup-Sequence.3.1.4 SYSTEMDIR:S/Startup-Sequence
+  IF "$amigaosversion" EQ "3.2"
+    ; copy startup-sequence for amiga os 3.2
+    Copy >NIL: PACKAGEDIR:Patches/Startup-Sequence.3.2 SYSTEMDIR:S/Startup-Sequence
+  ELSE
+    IF "$amigaosversion" EQ "3.1.4"
+      ; copy startup-sequence for amiga os 3.1.4
+      Copy >NIL: PACKAGEDIR:Patches/Startup-Sequence.3.1.4 SYSTEMDIR:S/Startup-Sequence
 
-  ; install patch amiga os 3.1.4.1, if it exists
-  IF EXISTS "SYSTEMDIR:S/Install-Patch-Amiga-OS-3141"
-    Execute "SYSTEMDIR:S/Install-Patch-Amiga-OS-3141" SYS SYSTEMDIR QUIET
+      ; install patch amiga os 3.1.4.1, if it exists
+      IF EXISTS "SYSTEMDIR:S/Install-Patch-Amiga-OS-3141"
+        Execute "SYSTEMDIR:S/Install-Patch-Amiga-OS-3141" SYS SYSTEMDIR QUIET
+      ENDIF
+    ENDIF
   ENDIF
 
   ; disable patchram, if it exists
@@ -123,6 +144,31 @@ ELSE
 
   ; copy startup-sequence for amiga os 3.1
   Copy >NIL: PACKAGEDIR:Patches/Startup-Sequence.3.1 SYSTEMDIR:S/Startup-Sequence
+ENDIF
+
+; set harddisk icon
+set harddiskicon ""
+IF EXISTS "SYSTEMDIR:Prefs/Env-Archive/Sys/def_harddisk.info"
+  set harddiskicon "SYSTEMDIR:Prefs/Env-Archive/Sys/def_harddisk.info"
+ELSE
+  IF EXISTS "SYSTEMDIR:Disk.info"
+    set harddiskicon "SYSTEMDIR:Disk.info"
+  ENDIF
+ENDIF
+
+; update disk icon, if harddisk icon exists
+IF NOT "$harddiskicon" EQ ""
+  ; update dh1 disk icon, if dh1: device exists
+  Assign >NIL: EXISTS DH1:
+  IF $RC EQ 0 VAL
+    Copy >NIL: "$harddiskicon" "DH1:Disk.info"
+  ENDIF
+
+  ; update dh2 disk icon, if dh2: device exists
+  Assign >NIL: EXISTS DH2:
+  IF $RC EQ 0 VAL
+    Copy >NIL: "$harddiskicon" "DH2:Disk.info"
+  ENDIF
 ENDIF
 
 ; Copy scsi device
@@ -169,8 +215,8 @@ Assign >NIL: ENV: RAM:ENV
 Protect FONTS:#? +RWED ALL QUIET
 SYSTEMDIR:System/FixFonts
 
-; skip to igame, if amiga os is not 3.1.4
-IF NOT "$amigaosversion" EQ "3.1.4"
+; skip to igame, if amiga os is 3.1
+IF "$amigaosversion" EQ "3.1"
   SKIP IGAME
 ENDIF
 
@@ -178,7 +224,7 @@ ENDIF
 ; --------------
 LAB disablescalos
 
-set disablescalos `RequestChoice "Scalos Disabled" "Scalos is disabled when installing ClassicWB with*NAmiga OS 3.1.4 as it displays garbled or distorted*NNewIcons.*N*NClick 'Help' for more information or click 'OK'*Nto continue installation." "Help|OK"`
+set disablescalos `RequestChoice "Scalos Disabled" "Scalos is disabled when installing ClassicWB with*NAmiga OS 3.2 or 3.1.4 as it displays garbled or*Ndistorted NewIcons.*N*NClick 'Help' for more information or click 'OK'*Nto continue installation." "Help|OK"`
 
 ; help option
 IF "$disablescalos" EQ 1 VAL 
@@ -385,8 +431,8 @@ ENDIF
 
 LAB NONE
 
-  ; patch scalos title, if amiga os version is 3.1.4
-  IF "$amigaosversion" EQ "3.1.4"
+  ; patch scalos title, if amiga os version is not 3.1
+  IF NOT "$amigaosversion" EQ "3.1"
     Copy >NIL: "PACKAGEDIR:Patches/Scalos.prefs.none" "SYSTEMDIR:Prefs/Env-Archive/Scalos/Scalos.prefs"
   ENDIF
 
@@ -428,8 +474,8 @@ LAB RETRO
   delete >NIL: SYSTEMDIR:Temp/optimized.zip
   delete >NIL: SYSTEMDIR:Temp/oldicons.zip
 
-  ; patch scalos title, if amiga os version is 3.1.4
-  IF "$amigaosversion" EQ "3.1.4"
+  ; patch scalos title, if amiga os version is not 3.1
+  IF NOT "$amigaosversion" EQ "3.1"
     Copy >NIL: "PACKAGEDIR:Patches/Scalos.prefs.theme" "SYSTEMDIR:Prefs/Env-Archive/Scalos/Scalos.prefs"
 
     Copy >NIL: SYSTEMDIR:Prefs/Env-Archive/Sys/WBPattern.prefs.retro SYSTEMDIR:Prefs/Env-Archive/Sys/WBPattern.prefs CLONE
@@ -469,8 +515,8 @@ LAB REGEN
   delete >NIL: SYSTEMDIR:Temp/optimized.zip
   delete >NIL: SYSTEMDIR:Temp/oldicons.zip
 
-  ; patch scalos title, if amiga os version is 3.1.4
-  IF "$amigaosversion" EQ "3.1.4"
+  ; patch scalos title, if amiga os version is not 3.1
+  IF NOT "$amigaosversion" EQ "3.1"
     Copy >NIL: "PACKAGEDIR:Patches/Scalos.prefs.theme" "SYSTEMDIR:Prefs/Env-Archive/Scalos/Scalos.prefs"
 
     Copy >NIL: SYSTEMDIR:Prefs/Env-Archive/Sys/WBPattern.prefs.regen SYSTEMDIR:Prefs/Env-Archive/Sys/WBPattern.prefs CLONE
@@ -541,6 +587,14 @@ LAB DISABLE
   delete >NIL: SYSTEMDIR:Temp/oldicons.zip
 
 LAB COPPER
+
+; disable copper, border blank, stack attack and skip to anticlick, if amiga os is not 3.1
+IF NOT "$amigaosversion" EQ "3.1"
+  delete >NIL: SYSTEMDIR:Temp/Copper_enable
+  delete >NIL: SYSTEMDIR:Temp/BorderBlank_enable
+  delete >NIL: SYSTEMDIR:Temp/StackAttack_enable
+  SKIP ANTICLICK
+ENDIF
 
 IF EXISTS SYSTEMDIR:C/Copper_enable
   cls
@@ -650,11 +704,6 @@ LAB DISABLE
   delete >NIL: SYSTEMDIR:Temp/BorderBlank_enable
 
 LAB STACK
-
-; skip to anticlick, if amiga os version is 3.1.4 as stackattack is not needed for amiga os 3.1.4
-IF "$amigaosversion" EQ "3.1.4"
-  SKIP ANTICLICK
-ENDIF
 
 IF EXISTS SYSTEMDIR:Temp/StackAttack_enable
   cls
